Basic post fetching works

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>React Puppies</title>
+  <title>React Async</title>
 </head>
 <body>
   <div id="app"></div>
